# python_template

./: .dockerignore  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Dockerfile.ci  README.md  alembic.ini  docker-compose.yml  otel-config.yaml  pyproject.toml  tach.toml
.github/workflows/: cd.yml  ci.yml  security.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_items_table.py  0002_create_outbox_table.py  0003_add_category_id_to_items.py
scripts/: protect_arch_tests.sh
src/app/: __init__.py  container.py  main.py  settings.py
src/app/application/: constants.py  exceptions.py  result.py
src/app/application/commands/: category_commands.py  item_commands.py
src/app/application/dtos/: auth_dtos.py  category_dtos.py  item_dtos.py  pagination.py
src/app/application/handlers/: category_command_handlers.py  category_query_handlers.py  command_handlers.py  query_handlers.py
src/app/application/mappers/: category_mapper.py  item_mapper.py
src/app/application/ports/: category_application_service.py  health_check.py  item_application_service.py  unit_of_work.py
src/app/application/queries/: category_queries.py  item_queries.py
src/app/application/services/: category_service.py  item_service.py
src/app/domain/: constants.py
src/app/domain/events/: base.py
src/app/domain/exceptions/: domain_errors.py
src/app/domain/model/: aggregate.py  entity.py  value_object.py
src/app/domain/model/example/: category.py  category_events.py  category_value_objects.py  item.py  item_events.py  value_objects.py
src/app/domain/ports/inbound/: __init__.py  clock.py  item_service.py
src/app/domain/ports/outbound/: category_repository.py  circuit_breaker.py  event_publisher.py  health_check.py  item_repository.py  unit_of_work.py
src/app/domain/specifications/: __init__.py  base.py  category_specifications.py  item_specifications.py
src/app/infrastructure/auth/: models.py  oidc_verifier.py
src/app/infrastructure/clock/: fake_clock.py  system_clock.py
src/app/infrastructure/di/: __init__.py  events_container.py  persistence_container.py  resilience_container.py
src/app/infrastructure/events/: README.md  _registry.py  in_process_publisher.py  outbox_publisher.py  outbox_relay.py  serialization.py
src/app/infrastructure/events/broker/: __init__.py  base.py  kafka.py  rabbitmq.py
src/app/infrastructure/events/consumer/: __init__.py  base.py  kafka.py  rabbitmq.py
src/app/infrastructure/observability/: logging.py  metrics.py  tracing.py
src/app/infrastructure/persistence/: README.md
src/app/infrastructure/persistence/in_memory/: category_repository.py  category_unit_of_work.py  health_check.py  item_repository.py  unit_of_work.py
src/app/infrastructure/persistence/sqlalchemy/: __init__.py  category_repository.py  category_unit_of_work.py  health_check.py  item_repository.py  models.py  specification_translator.py  specification_translator_category.py  unit_of_work.py
src/app/infrastructure/rate_limiting/: limiter.py
src/app/infrastructure/resilience/: pybreaker_adapter.py
src/app/presentation/: app_state.py  error_handlers.py
src/app/presentation/api/v1/routers/: categories.py  health.py  items.py
src/app/presentation/api/v1/schemas/: category_schemas.py  item_schemas.py
src/app/presentation/mappers/: category_schema_mapper.py  item_schema_mapper.py
src/app/presentation/middlewares/: auth_middleware.py  correlation_id.py  telemetry_middleware.py
tests/: conftest.py
tests/architecture/: test_dependencies.py  test_structure.py
tests/integration/api/: test_categories_api.py  test_categories_e2e.py  test_items_api.py  test_items_e2e.py
tests/integration/infrastructure/: test_category_repository_contract.py  test_item_repository_contract.py
tests/unit/application/: test_category_handlers.py  test_item_handlers.py
tests/unit/domain/: test_category.py  test_category_properties.py  test_category_specifications.py  test_item.py  test_item_properties.py  test_item_specifications.py  test_value_objects_properties.py
tests/unit/infrastructure/: test_events.py  test_resilience.py
tests/unit/presentation/: test_error_handlers.py
