[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app"
version = "0.1.0"
description = "FastAPI Hexagonal Architecture Template"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "granian>=1.6.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "authlib>=1.3.1",
    "httpx>=0.27.0",
    "structlog>=24.2.0",
    "slowapi>=0.1.9",
    "pybreaker>=1.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
rabbitmq = ["aio-pika>=9.4.0"]
kafka    = ["aiokafka>=0.11.0"]
brokers  = ["aio-pika>=9.4.0", "aiokafka>=0.11.0"]

[project.scripts]
serve = "granian:main"

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pylint>=3.2.0",
    "ruff>=0.4.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-archon>=0.0.7",
    "tach>=0.34.1",
    "import-linter>=2.1",
    "pre-commit>=3.7.0",
    "httpx>=0.27.0",
    "types-authlib>=1.3.0",
    "aiosqlite>=0.20.0",
]

# ---------------------------------------------------------------------------
# Hatch
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/app"]

# ---------------------------------------------------------------------------
# mypy (strict)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
exclude = ["tests/"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["opentelemetry.*", "authlib.*", "granian.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pylint
# ---------------------------------------------------------------------------
[tool.pylint.main]
source-roots = ["src"]
recursive = true
fail-under = 8.0

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
# TypeVar names like TService, TRepo, THandlers are clear and idiomatic
typevar-rgx = "[A-Z][A-Za-z]*"

[tool.pylint.design]
# Specification translators use a branch-per-type pattern that naturally has many returns
max-returns = 8

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "too-few-public-methods",
    "R0903",
    "duplicate-code",  # DTOs and response schemas intentionally mirror structure
    "R0913",  # too-many-arguments: domain factory/update methods legitimately have many params
    "R0917",  # too-many-positional-arguments: same rationale as R0913
    "W0718",  # broad-exception-caught: async consumer/relay loops must survive any handler exception
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "ANN", "RUF"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S101"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

# ---------------------------------------------------------------------------
# import-linter
# ---------------------------------------------------------------------------
[tool.importlinter]
root_packages = ["app"]
include_external_packages = true
